WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
163545
NetworkSession: PendingDownload is leaked if canceled before willDecidePendingDownloadDestination
https://bugs.webkit.org/show_bug.cgi?id=163545
Summary
NetworkSession: PendingDownload is leaked if canceled before willDecidePendin...
Carlos Garcia Campos
Reported
2016-10-17 08:55:16 PDT
If a download started by DownloadManager::startDownload() is cancelled before DownloadManager::willDecidePendingDownloadDestination() is called, DownloadManager::cancelDownload() does nothing, because the Download hasn't been created yet and m_downloadsWaitingForDestination map doesn't contain the download ID, and the PendingDownload is never removed from the m_pendingDownloads map.
Attachments
Patch
(4.37 KB, patch)
2016-10-17 09:00 PDT
,
Carlos Garcia Campos
no flags
Details
Formatted Diff
Diff
Fix debug build with network session disabled.
(4.41 KB, patch)
2016-10-17 09:29 PDT
,
Carlos Garcia Campos
achristensen
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2016-10-17 09:00:14 PDT
Created
attachment 291821
[details]
Patch
Carlos Garcia Campos
Comment 2
2016-10-17 09:29:20 PDT
Created
attachment 291823
[details]
Fix debug build with network session disabled. So, Mac EWS debug doesn't have network session enabled?
Alex Christensen
Comment 3
2016-10-17 10:25:17 PDT
(In reply to
comment #2
)
> Created
attachment 291823
[details]
> Fix debug build with network session disabled. > > So, Mac EWS debug doesn't have network session enabled?
This is true, unfortunately. Network session is only enabled starting with Sierra/iOS10 and I think EWS uses El Capitan.
Alex Christensen
Comment 4
2016-10-17 10:30:01 PDT
Comment on
attachment 291823
[details]
Fix debug build with network session disabled. r=me
Carlos Garcia Campos
Comment 5
2016-10-17 23:06:47 PDT
Committed
r207454
: <
http://trac.webkit.org/changeset/207454
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug